<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2UG</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tp">Transport</string>
    <string name="ht">Hotel</string>
    <string name="ta">Tourist\nAttraction</string>
    <string name="DS">Dangerous\nSpots</string>
    <string name="CC">Currency\nConverter</string>
    <string name="ab">About Us</string>
    <string name="addr">Address</string>
    <string name="dist">District</string>
    <string name="telep">Telephone</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
</resources>
